monitoring/grafana/grafana-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    #nginx.ingress.kubernetes.io/rewrite-target: "/$1"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
  labels:
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/name: grafana
spec:
  rules:
  - host: www-dev1.ds.iris.edu
    http:
      paths:
      - path: /login/(.*)
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
  tls:
  - hosts:
    - "www-dev1.ds.iris.edu"
    secretName: www-dev1-ds-iris-edu
